--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,15 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Старт приложение (vite)",
+      "type": "shell",
+      "command": "npm run старт",
+      "group": "build",
+    },
+    {
       "label": "Собрать проект (артель собрать)",
       "type": "shell",
-      "command": "node n-artel.js собрать приложение .сборка",
+      "command": "node n-artel.js собрать приложение .сборка/приложение",
       "group": "build",
     },
     {
