--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   {
     "artel": "0.4.203",
     "reactronic": "0.23.104",
-    "verstak": "0.23.115"
+    "verstak": "0.23.115",
+    "vite": "4.4.9"
   },
   "scripts":
   {
-    "настроить": "npm install"
+    "настроить": "npm install",
+    "старт": "vite -d"
   }
 }
