--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Запуск",
+      "name": "Пуск",
       "type": "node",
       "request": "launch",
       "program": "n-artel",
@@ -15,7 +15,7 @@
       "args": [
         "пуск",
         "${relativeFileDirname}",
-        "-сборка/${relativeFileDirname}"
+        ".сборка/${relativeFileDirname}"
       ],
       "console": "integratedTerminal",
       "autoAttachChildProcesses": false,
@@ -26,7 +26,7 @@
       ],
     },
     {
-      "name": "Запуск (через VS Code Extension)",
+      "name": "Пуск (через VS Code Extension)",
       "type": "artel",
       "request": "launch",
       "project": "${workspaceFolder}/${relativeFileDirname}"
