--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts":
   {
-    "настроить": "npm install",
-    "пуск": "vite -d"
+    "скачать-пакеты": "npm install",
+    "собрать": "node n-artel.js собрать исходники/приложение-1 .сборка/приложение-1 && cp исходники/приложение-1/index.html .сборка/приложение-1",
+    "пуск": "npm run собрать && vite -d"
   }
 }
