--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   {
     "скачать-пакеты": "npm install",
     "собрать": "node n-artel.js собрать исходники/приложение-1 .сборка/приложение-1",
-    "пуск": "npm run собрать && vite -d"
+    "пуск": "npm run собрать && vite"
   }
 }
