--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts":
   {
     "скачать-пакеты": "npm install",
-    "собрать": "node n-artel.js собрать исходники/приложение-1 .сборка/приложение-1",
+    "собрать": "node n-artel.js собрать Исходники/Приложение-1 .сборка/Приложение-1",
     "пуск": "npm run собрать && vite"
   }
 }
