--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   {
     "скачать-пакеты": "npm install",
     "собрать": "node Инструменты/n-artel.js собрать . .сборка",
-    "пуск": "npm run собрать && vite"
+    "пуск": "npm run собрать && vite --config Инструменты/vite.config.js"
   }
 }
