--- a/.сборка/package.json
+++ b/.сборка/package.json
@@ -11,7 +11,7 @@
   "scripts":
   {
     "скачать-пакеты": "npm install",
-    "собрать": "node Инструменты/n-artel.js собрать . .сборка",
-    "пуск": "npm run собрать && vite --config Инструменты/vite.config.js"
+    "собрать": "node n-artel.js собрать .. package",
+    "пуск": "npm run собрать && vite"
   }
 }
