--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules
-build/package
-.build/package
-сборка/package
-.сборка/package
+build/bin
+.build/bin
+сборка/bin
+.сборка/bin
