--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,37 +3,37 @@
   "editor.insertSpaces": true,
   "files.exclude": {
     // "**/node_modules/": true,
-    // "**/build/": true,
-    // "**/Build/": true,
-    // "**/.build/": true,
-    // "**/.Build/": true,
-    // "**/сборка/": true,
-    // "**/Сборка/": true,
-    // "**/.сборка/": true,
-    // "**/.Сборка/": true,
+    // "**/build/executable": true,
+    // "**/Build/executable": true,
+    // "**/.build/executable": true,
+    // "**/.Build/executable": true,
+    // "**/сборка/executable": true,
+    // "**/Сборка/executable": true,
+    // "**/.сборка/executable": true,
+    // "**/.Сборка/executable": true,
   },
   "files.watcherExclude": {
     "**/node_modules/": true,
-    "**/build/": true,
-    "**/Build/": true,
-    "**/.build/": true,
-    "**/.Build/": true,
-    "**/сборка/": true,
-    "**/Сборка/": true,
-    "**/.сборка/": true,
-    "**/.Сборка/": true,
+    "**/build/executable": true,
+    "**/Build/executable": true,
+    "**/.build/executable": true,
+    "**/.Build/executable": true,
+    "**/сборка/executable": true,
+    "**/Сборка/executable": true,
+    "**/.сборка/executable": true,
+    "**/.Сборка/executable": true,
   },
   "cSpell.ignorePaths": [
     ".git",
     "**/node_modules/**",
-    "**/build/**",
-    "**/Build/**",
-    "**/.build/**",
-    "**/.Build/**",
-    "**/сборка/**",
-    "**/Сборка/**",
-    "**/.сборка/**",
-    "**/.Сборка/**",
+    "**/build/executable/**",
+    "**/Build/executable/**",
+    "**/.build/executable/**",
+    "**/.Build/executable/**",
+    "**/сборка/executable/**",
+    "**/Сборка/executable/**",
+    "**/.сборка/executable/**",
+    "**/.Сборка/executable/**",
     "package-lock.json",
     "yarn.lock",
   ],
