--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
         // "--inspect"
       ],
       "args": [
-        "пуск",
+        "launch",
         "..",
         "${relativeFileDirname}"
       ],
