--- a/.сборка/package.json
+++ b/.сборка/package.json
@@ -3,7 +3,7 @@
   "description": "Демонстрация возможностей: Артель + Верстак",
   "devDependencies":
   {
-    "artel": "0.4.218",
+    "artel": "0.4.221",
     "reactronic": "0.23.109",
     "verstak": "0.23.118",
     "vite": "4.4.9"
@@ -11,7 +11,7 @@
   "scripts":
   {
     "скачать-пакеты": "npm install",
-    "собрать": "node n-artel.js собрать .. executable",
+    "собрать": "node n-artel.js build .. Executable",
     "пуск": "npm run собрать && vite"
   }
 }
