--- a/.сборка/package.json
+++ b/.сборка/package.json
@@ -12,6 +12,6 @@
   {
     "скачать-пакеты": "npm install",
     "собрать": "node n-artel.js build .. Executable",
-    "пуск": "npm run собрать && vite"
+    "пуск-сервера": "npm run собрать && vite"
   }
 }
