--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Пуск",
+      "name": "Запуск",
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:1234",
